# swe-learn-cli

./: Cargo.toml  LICENSE  PRD.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
content/cloud/: caching.md  compute.md  databases.md  load-balancing.md  messaging.md  multi-region.md  networking.md  observability.md  resilience-patterns.md  search-and-indexing.md  security.md  storage.md
content/databases/: cap-theorem.md  consistency-models.md  cqrs-event-sourcing.md  databases-compared.md  indexing.md  pacelc.md  replication.md  sharding.md  sql-vs-nosql.md  transactions-acid.md
content/networking/: api-protocols.md  cdn.md  dns.md  http-versions.md  https-tls.md  load-balancing-algorithms.md  osi-model.md  proxies-gateways.md  tcp-vs-udp.md  websockets.md
content/system-design/: distributed-cache.md  dropbox.md  notification-system.md  rate-limiter.md  twitter-feed.md  uber.md  url-shortener.md  web-crawler.md  whatsapp.md  youtube.md
src/: app.rs  content.rs  events.rs  main.rs  markdown.rs  modules.rs
src/ui/: home.rs  mod.rs  module_view.rs  topic_view.rs
