[package]
name = "swelearn"
version = "0.1.0"
edition = "2021"
description = "Offline terminal-based SWE interview prep tool"
license = "MIT"
repository = "https://github.com/httpNick/swe-learn-cli"
homepage = "https://github.com/httpNick/swe-learn-cli"
documentation = "https://github.com/httpNick/swe-learn-cli"
keywords = ["cli", "tui", "interview", "learning", "swe"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
include_dir = "0.7"

[build-dependencies]
# placeholder for mermaid pre-rendering later
